--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,5 +3,6 @@ name = "sylveon"
 version = "0.1.0"
 authors = ["rini <rini@rinici.de>"]
 edition = "2021"
+description = "A simple way to parse CLI arguments"
 repository = "https://codeberg.org/twink/sylveon"
 license = "Apache-2.0"
